# scythe

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.cursor/rules/: changelog.mdc  hatchet-docs.mdc  updating-docs-for-pr.mdc
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
blog/building-scythe/: index.html
concepts/architecture/: index.html
concepts/experiment-lifecycle/: index.html
concepts/scatter-gather/: index.html
deployment/cloud/: index.html
deployment/local/: index.html
docs/: index.md  worker-configuration.md
docs/blog/: building-scythe.md
docs/concepts/: architecture.md  experiment-lifecycle.md  scatter-gather.md
docs/deployment/: cloud.md  local.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: defining-experiments.md  retrieving-results.md  running-experiments.md  workers.md  workflow-experiments.md
docs/reference/: api.md  configuration.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/defining-experiments/: index.html
guides/retrieving-results/: index.html
guides/running-experiments/: index.html
guides/workers/: index.html
guides/workflow-experiments/: index.html
reference/api/: index.html
reference/configuration/: index.html
search/: search_index.json
src/scythe/: __init__.py  allocate.py  base.py  experiments.py  hatchet.py  registry.py  scatter_gather.py  settings.py  storage.py  types.py  worker.py
src/scythe/utils/: __init__.py  filesys.py  results.py  s3.py
tests/: .env.test  __init__.py  conftest.py  test_additional_coverage.py  test_allocate_worker.py  test_experiments_model_copy.py  test_foo.py  test_hatchet.py  test_registry_and_scatter.py  test_scatter_gather.py  test_utils.py
