[project]
name = "scythe-engine"
version = "0.0.18"
description = "This is a repository for managing embarassingly parallel experiments with Hatchet."
authors = [
    { name = "Sam Wolk", email = "mail@samwolk.info" }
]
requires-python =">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "hatchet-sdk>=1,<2",
    "pydantic>=2.9.2,<3.0",
    "boto3>=1.35,<2.0",
    "pandas>=2.2.2,<2.3",
    "numpy>=2.2,<2.3",
    "tqdm>=4.66,<5.0",
    "tables>=3.9,<4.0",
    "fastparquet~=2024.11.0",
    "pyarrow~=19.0.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.0,<2.0",
    "pytest>=7.2,<8.0",
    "pytest-cov>=4.0,<5.0",
    "pre-commit>=3.4,<4.0",
    "tox>=4.11,<5.0",
    "pyright~=1.1.392",
    "boto3-stubs[essential]>=1.35,<2.0",
    "pyinstrument~=5.0.1",
    "supabase>=2.15,<3.0",
]
docs = [
    "mkdocs>=1.4,<2.0",
    "mkdocs-material>=9.2,<10.0",
    "mkdocstrings[python]>=0.26,<1.0",
    "mkdocstrings-python>=1.11,<2.0",
]
api = [
    "fastapi>=0.111,<1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.30,<1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scythe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src/scythe"]
typeCheckingMode = "standard"
ignore = ["tests/"]
venvPath = "."
venv = ".venv"


[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    "D"
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src/scythe"]

[project.urls]
Homepage = "https://github.com/szvsw/scythe"
Documentation = "https://szvsw.github.io/scythe"
Repository = "https://github.com/szvsw/scythe"
Issues = "https://github.com/szvsw/scythe/issues"
